syntax = "proto3";

package common;


message EmailParam {
  string email = 1;
}

message IdParam {
  string id = 1;
}